--- a/Routh.ipynb
+++ b/Routh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "845287fa",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "63dddc2f",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "TransferFunction(array([1]), array([  1,  10,  45, 120, 210, 252, 210, 120,  45,  10,   1]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "aac0f587",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "       -0.95422344-0.0323362j , -0.9441992 +0.j        ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "107f6714",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "98c7247b",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "       -0.99999997-0.00026011j, -0.99973992+0.j        ])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "1961843e",
    "metadata": {},
    "outputs": [
@@ -173,10 +173,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: tbcontrol in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (0.2.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (1.21.5)\n",
-      "Requirement already satisfied: scipy in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (1.3.0)\n",
       "Requirement already satisfied: tqdm in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (4.62.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (1.3.0)\n",
       "Requirement already satisfied: packaging in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (21.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tbcontrol) (1.21.5)\n",
       "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from packaging->tbcontrol) (2.4.7)\n",
       "Requirement already satisfied: colorama in c:\\users\\usuario\\.conda\\envs\\sistdin\\lib\\site-packages (from tqdm->tbcontrol) (0.4.4)\n",
       "Help on function routh in module tbcontrol.symbolic:\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "de5fb1b1",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "Poly(a_6*s**6 + a_5*s**5 + a_4*s**4 + a_3*s**3 + a_2*s**2 + a_1*s + a_0, s, domain='ZZ[a_0,a_1,a_2,a_3,a_4,a_5,a_6]')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "feda53f0",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "[                                                                                                                                                                                                                                                                                                                                                                                                           a_0,                                                          0,   0,   0]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,20 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "93e27fd0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Gp10Den' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-c5470b627dd1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mGp10Den\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Gp10Den' is not defined"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\operatorname{Poly}{\\left( s^{10} + 10 s^{9} + 45 s^{8} + 120 s^{7} + 210 s^{6} + 252 s^{5} + 210 s^{4} + 120 s^{3} + 45 s^{2} + 10 s + 1, s, domain=\\mathbb{Z} \\right)}$"
+      ],
+      "text/plain": [
+       "Poly(s**10 + 10*s**9 + 45*s**8 + 120*s**7 + 210*s**6 + 252*s**5 + 210*s**4 + 120*s**3 + 45*s**2 + 10*s + 1, s, domain='ZZ')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "c0e49e9b",
    "metadata": {},
    "outputs": [
@@ -323,7 +325,7 @@
        "[          1,          0,        0,      0,  0, 0]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "d5f0ce6b",
    "metadata": {},
    "outputs": [
@@ -405,7 +407,7 @@
        "[                                                                                                                                                       k_c + 1,                                                            0,                      0,                  0,       0,       0]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,12 +439,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "1b61497c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75} \\vee 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\wedge \\left(\\left(k_{c} < \\frac{5632 \\sqrt{5}}{125} + \\frac{512}{5} \\wedge 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\vee k_{c} < -62976 + 28160 \\sqrt{5} \\vee k_{c} < \\frac{512}{5} - \\frac{5632 \\sqrt{5}}{125}\\right) \\wedge k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75}$"
+      ],
+      "text/plain": [
+       "(k_c < -93184/25 + 45056*sqrt(39)/75) & ((k_c < -93184/25 + 45056*sqrt(39)/75) | (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)) & ((k_c < -62976 + 28160*sqrt(5)) | (k_c < 512/5 - 5632*sqrt(5)/125) | ((k_c < 5632*sqrt(5)/125 + 512/5) & (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "resp = sym.solve([e > 0 for e in A[:, 0]], kc)"
+    "resp = sym.solve([e > 0 for e in A[:, 0]], kc)\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b01ffaee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left(k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75} \\vee 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\wedge \\left(\\left(k_{c} < \\frac{5632 \\sqrt{5}}{125} + \\frac{512}{5} \\wedge 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\vee k_{c} < -62976 + 28160 \\sqrt{5} \\vee k_{c} < \\frac{512}{5} - \\frac{5632 \\sqrt{5}}{125}\\right) \\wedge k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75}$"
+      ],
+      "text/plain": [
+       "(k_c < -93184/25 + 45056*sqrt(39)/75) & ((k_c < -93184/25 + 45056*sqrt(39)/75) | (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)) & ((k_c < -62976 + 28160*sqrt(5)) | (k_c < 512/5 - 5632*sqrt(5)/125) | ((k_c < 5632*sqrt(5)/125 + 512/5) & (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.as_dummy()"
    ]
   },
   {
@@ -655,11 +696,51 @@
    "version": "3.7.3"
   },
   "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
-   "eqNumInitial": 0
+   "eqNumInitial": 0,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
