--- a/Ejercicio_Identificacion.ipynb
+++ b/Ejercicio_Identificacion.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "A menudo debe realizar experimentos sobre los procesos que va a controlar para obtener datos útiles que conlleven a modelos apropiados para los sistemas. Los datos de estos experimentos se guardan en forma de tablas para posterior análisis.\n",
     "\n",
-    "Esta vez se dispone de un modelo en OpenModelica en el archivo `ResisTemp` que puede simularse para generar una tabla de datos.\n",
+    "Esta vez se dispone de un modelo en OpenModelica en el archivo `ResistTemp` que puede simularse para generar una tabla de datos.\n",
     "\n",
     "Una tabla de datos generada por el modelo se encuentra en el archivo `DatosResistTemp.csv`."
    ]
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "0c8d453f",
    "metadata": {},
    "outputs": [
@@ -85,100 +85,124 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>time</th>\n",
+       "      <th>heatCapacitor.T</th>\n",
+       "      <th>stepV.V</th>\n",
+       "      <th>stepV.i</th>\n",
        "      <th>temperatureSensor.T</th>\n",
-       "      <th>step.y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.2</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.3</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.4</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.850000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>99.7</td>\n",
-       "      <td>96.842186</td>\n",
-       "      <td>1</td>\n",
+       "      <th>99</th>\n",
+       "      <td>97.0</td>\n",
+       "      <td>978.173944</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-1.356348</td>\n",
+       "      <td>705.023944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>99.8</td>\n",
-       "      <td>96.842201</td>\n",
-       "      <td>1</td>\n",
+       "      <th>100</th>\n",
+       "      <td>98.0</td>\n",
+       "      <td>978.173970</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-1.356348</td>\n",
+       "      <td>705.023970</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1001</th>\n",
-       "      <td>99.9</td>\n",
-       "      <td>96.842215</td>\n",
-       "      <td>1</td>\n",
+       "      <th>101</th>\n",
+       "      <td>99.0</td>\n",
+       "      <td>978.173995</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-1.356348</td>\n",
+       "      <td>705.023995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1002</th>\n",
+       "      <th>102</th>\n",
        "      <td>100.0</td>\n",
-       "      <td>96.842230</td>\n",
-       "      <td>1</td>\n",
+       "      <td>978.174022</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-1.356348</td>\n",
+       "      <td>705.024022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1003</th>\n",
+       "      <th>103</th>\n",
        "      <td>100.0</td>\n",
-       "      <td>96.842230</td>\n",
-       "      <td>1</td>\n",
+       "      <td>978.174022</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-1.356348</td>\n",
+       "      <td>705.024022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1004 rows × 3 columns</p>\n",
+       "<p>104 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       time  temperatureSensor.T  step.y\n",
-       "0       0.0            20.000000       0\n",
-       "1       0.1            20.000000       0\n",
-       "2       0.2            20.000000       0\n",
-       "3       0.3            20.000000       0\n",
-       "4       0.4            20.000000       0\n",
-       "...     ...                  ...     ...\n",
-       "999    99.7            96.842186       1\n",
-       "1000   99.8            96.842201       1\n",
-       "1001   99.9            96.842215       1\n",
-       "1002  100.0            96.842230       1\n",
-       "1003  100.0            96.842230       1\n",
+       "      time  heatCapacitor.T  stepV.V   stepV.i  temperatureSensor.T\n",
+       "0      0.0       300.000000       50  0.000000            26.850000\n",
+       "1      1.0       300.000000       50  0.000000            26.850000\n",
+       "2      2.0       300.000000       50  0.000000            26.850000\n",
+       "3      3.0       300.000000       50  0.000000            26.850000\n",
+       "4      4.0       300.000000       50  0.000000            26.850000\n",
+       "..     ...              ...      ...       ...                  ...\n",
+       "99    97.0       978.173944       50 -1.356348           705.023944\n",
+       "100   98.0       978.173970       50 -1.356348           705.023970\n",
+       "101   99.0       978.173995       50 -1.356348           705.023995\n",
+       "102  100.0       978.174022       50 -1.356348           705.024022\n",
+       "103  100.0       978.174022       50 -1.356348           705.024022\n",
        "\n",
-       "[1004 rows x 3 columns]"
+       "[104 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
